# Stacer-x

./: .gitignore  CMakeLists.txt  README.md  findings.md  mockup-stacer.html  plan-stacer.md  release.sh  ui-guideline-stacer.md
.github/workflows/: build.yml
debian/: changelog  control
desktop/: acters.desktop  acters.metainfo.xml.in  stacer-x.desktop
flatpak/: fr.quentium.stacer.yml
rpm/SPECS/: copr.spec  stacer-x.spec  stacer.spec
stacer/: app.cpp  app.ui  main.cpp  static.qrc
stacer-core/Info/: cpu_info.cpp  memory_info.cpp
stacer-core/Tools/: apt_source_tool.cpp  package_tool.cpp
stacer-core/Utils/: command_util.cpp  command_util.h
stacer-qml/: CMakeLists.txt  CleanerController.cpp  CleanerController.h  HostsController.cpp  HostsController.h  ProcessesController.cpp  ProcessesController.h  ResourcesController.cpp  ResourcesController.h  ServicesController.cpp  ServicesController.h  SettingsController.cpp  SettingsController.h  StartupController.cpp  StartupController.h  SystemController.cpp  SystemController.h  UninstallerController.cpp  UninstallerController.h  main.cpp
stacer-qml/qml/: Main.qml  Theme.qml
stacer-qml/qml/components/: AccentButton.qml  BoostMetric.qml  Card.qml  FeatureTile.qml  HeroBanner.qml  IconImage.qml  Logo.qml  NavItem.qml  NavRail.qml  NumberStepper.qml  PieChart.qml  ResourceChart.qml  SearchField.qml  Sparkline.qml  TitleBar.qml  Toggle.qml  WinButton.qml
stacer-qml/qml/pages/: AboutPage.qml  CleanerPage.qml  DashboardPage.qml  DiskPage.qml  HostsPage.qml  PlaceholderPage.qml  ProcessesPage.qml  ResourcesPage.qml  ServicesPage.qml  SettingsPage.qml  StartupPage.qml  UninstallerPage.qml
stacer/Managers/: app_manager.cpp  app_manager.h  setting_manager.cpp
stacer/Pages/AptSourceManager/: apt_source_manager_page.cpp  apt_source_manager_page.ui
stacer/Pages/Dashboard/: circlebar.cpp
stacer/Pages/Resources/: history_chart.cpp  resources_page.cpp
stacer/Pages/Search/: search_page.cpp
stacer/Pages/Services/: services_page.ui
stacer/Pages/Settings/: settings_page.cpp  settings_page.h  settings_page.ui
stacer/Pages/StartupApps/: startup_apps_page.ui
stacer/Pages/SystemCleaner/: system_cleaner_page.cpp  system_cleaner_page.ui
stacer/Pages/Uninstaller/: uninstallerpage.ui
stacer/static/: themes.json
stacer/static/themes/default/style/: style.qss  values.ini
stacer/static/themes/light/style/: style.qss  values.ini
stacer/static/themes/pc-manager/style/: style.qss  values.ini
translations/: stacer_ar.ts  stacer_ca.ts  stacer_cs.ts  stacer_de.ts  stacer_en.ts  stacer_es.ts  stacer_eu.ts  stacer_fr.ts  stacer_gl.ts  stacer_hi.ts  stacer_hu.ts  stacer_it.ts  stacer_kn.ts  stacer_ko.ts  stacer_ml.ts  stacer_nl.ts  stacer_oc.ts  stacer_pl.ts  stacer_pt.ts  stacer_ro.ts  stacer_ru.ts  stacer_sv.ts  stacer_tr.ts  stacer_uk.ts  stacer_vi.ts  stacer_zh-cn.ts  stacer_zh-tw.ts
